--- a/devices.html
+++ b/devices.html
@@ -228,7 +228,7 @@
                     </h3>
                     <div class="device-price">9900円</div>
                     <div class="device-comment">
-                      IE3.0クローンの傑作マウス、だが95gとちょっと重いのが難点。3年愛用
+                      IE3.0クローンの傑作マウス、だが95gとちょっと重いのが難点。3年愛用、台パンにより二階級特進 8g軽量化されて復活
                     </div>
                   </div>
                 </div>
@@ -365,4 +365,5 @@
   </script>
 </body>
 </html>
+
 
