--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>油揚げのホームページ - ブログ</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
