--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://aburaageaburaage.com/index.html">
 
+  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png">
+
   <meta property="og:title" content="油揚げのホームページ - トップ">
   <meta property="og:description" content="油揚げのホームページは、SNSリンク、ギャラリー、ブログ、使用しているデバイスなどを紹介するサイトです。">
   <meta property="og:type" content="website">
