--- a/gallery.html
+++ b/gallery.html
@@ -229,59 +229,59 @@
       <p>キャプションに特筆されていない写真はすべて SONY Xperia 1 Ⅱで撮影したものです</p>
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="img/gallery/photo1.jpg" alt="Photo 1" data-caption="セイコーの時計台銀座のど真ん中にあるやつ">
+          <img src="img/gallery/smphoto1.jpg" alt="Photo 1" data-caption="セイコーの時計台銀座のど真ん中にあるやつ">
           <div class="caption">Photo 1</div>
         </div>
         <div class="gallery-item">
-          <img src="img/gallery/photo2.jpg" alt="Photo 2" data-caption="長野県の大正池ここら辺の山はマジきれい紅葉してもきれいやろなぁ">
+          <img src="img/gallery/smphoto2.jpg" alt="Photo 2" data-caption="長野県の大正池ここら辺の山はマジきれい紅葉してもきれいやろなぁ">
           <div class="caption">Photo 2</div>
         </div>
         <div class="gallery-item">
-          <img src="img/gallery/photo3.jpg" alt="Photo 3" data-caption="伊勢湾、ホテルからの景色">
+          <img src="img/gallery/smphoto3.jpg" alt="Photo 3" data-caption="伊勢湾、ホテルからの景色">
           <div class="caption">Photo 3</div>
         </div>
         <div class="gallery-item">
-          <img src="img/gallery/photo4.jpg" alt="Photo 4" data-caption="これも伊勢湾なんか鳥">
+          <img src="img/gallery/smphoto4.jpg" alt="Photo 4" data-caption="これも伊勢湾なんか鳥">
           <div class="caption">Photo 4</div>
         </div>
         <div class="gallery-item">
-          <img src="img/gallery/photo5.jpg" alt="Photo 5" data-caption="Guzman y Gomezマジうまいメキシコ・アメリカ料理？">
+          <img src="img/gallery/smphoto5.jpg" alt="Photo 5" data-caption="Guzman y Gomezマジうまいメキシコ・アメリカ料理？">
           <div class="caption">Photo 5</div>
         </div>
         <div class="gallery-item">
-          <img src="img/gallery/photo6.jpg" alt="Photo 6" data-caption="豚骨の匂い最初行ったときマジきつかったけど今は気にならないな">
+          <img src="img/gallery/smphoto6.jpg" alt="Photo 6" data-caption="豚骨の匂い最初行ったときマジきつかったけど今は気にならないな">
           <div class="caption">Photo 6</div>
         </div>
         <div class="gallery-item">
-          <img src="img/gallery/photo7.jpg" alt="Photo 7" data-caption="こんな感じで作ってます Redmi Note 11 Pro 5Gで撮影">
+          <img src="img/gallery/smphoto7.jpg" alt="Photo 7" data-caption="こんな感じで作ってます Redmi Note 11 Pro 5Gで撮影">
           <div class="caption">Photo 7</div>
         </div>
         <div class="gallery-item">
-          <img src="img/gallery/photo8.jpg" alt="Photo 8" data-caption="ｻﾌｨｰﾁｬﾝｶﾜｲｲﾔｯﾀｰ">
+          <img src="img/gallery/smphoto8.jpg" alt="Photo 8" data-caption="ｻﾌｨｰﾁｬﾝｶﾜｲｲﾔｯﾀｰ">
           <div class="caption">Photo 8</div>
         </div>
         <div class="gallery-item">
-          <img src="img/gallery/photo9.jpg" alt="Photo 9" data-caption="おへそってえっちじゃないですか？">
+          <img src="img/gallery/smphoto9.jpg" alt="Photo 9" data-caption="おへそってえっちじゃないですか？">
           <div class="caption">Photo 9</div>
         </div>
         <div class="gallery-item">
-          <img src="img/gallery/photo10.jpg" alt="Photo 10" data-caption="元荒川の桜アップ">
+          <img src="img/gallery/smphoto10.jpg" alt="Photo 10" data-caption="元荒川の桜アップ">
           <div class="caption">Photo 10</div>
         </div>
         <div class="gallery-item">
-          <img src="img/gallery/photo11.jpg" alt="Photo 11" data-caption="元荒川の桜、橋の上からの写真">
+          <img src="img/gallery/smphoto11.jpg" alt="Photo 11" data-caption="元荒川の桜、橋の上からの写真">
           <div class="caption">Photo 11</div>
         </div>
         <div class="gallery-item">
-          <img src="img/gallery/photo12.jpg" alt="Photo 12" data-caption="藤見橋という福島のつり橋から撮った写真">
+          <img src="img/gallery/smphoto12.jpg" alt="Photo 12" data-caption="藤見橋という福島のつり橋から撮った写真">
           <div class="caption">Photo 12</div>
         </div>
         <div class="gallery-item">
-          <img src="img/gallery/photo13.jpg" alt="Photo 13" data-caption="日光東照宮の階段、当日は雨だったがそのおかげで暑くなかった">
+          <img src="img/gallery/smphoto13.jpg" alt="Photo 13" data-caption="日光東照宮の階段、当日は雨だったがそのおかげで暑くなかった">
           <div class="caption">Photo 13</div>
         </div>
         <div class="gallery-item">
-          <img src="img/gallery/photo14.jpg" alt="Photo 14" data-caption="熊谷でやってるうちわ祭りでの写真">
+          <img src="img/gallery/smphoto14.jpg" alt="Photo 14" data-caption="熊谷でやってるうちわ祭りでの写真">
           <div class="caption">Photo 14</div>
         </div>
         
@@ -309,7 +309,7 @@
     document.querySelectorAll(".gallery-item img").forEach(img => {
       img.addEventListener("click", () => {
         modal.style.display = "flex";
-        modalImage.src = img.src;
+        modalImage.src = img.src.replace("/smphoto", "/photo");
         modalCaption.textContent = img.getAttribute("data-caption");
       });
     });
